--- a/template/player.html
+++ b/template/player.html
@@ -1,5 +1,5 @@
 <div class="player-detail" ng-repeat="player in players">
-                <img src="image/player_detail/DeGea.jpg" />
+                <img src="{{player.detailImage}}" />
                 <div class="player-name-box">
                     <h3 class="player-name">{{player.name}}</h3>
                     <h3 class="player-number">{{player.number}}</h3>
@@ -11,20 +11,8 @@
                             <td class="info-col-right">{{player.postion}}</td>
                         </tr>
                         <tr>
-                            <td class="info-col-left">Birthdate</td>
-                            <td class="info-col-right">{{player.birthdate}}</td>
-                        </tr>
-                        <tr>
-                            <td class="info-col-left">Birthplace</td>
-                            <td class="info-col-right">{{player.birthplace}}</td>
-                        </tr>
-                        <tr>
                             <td class="info-col-left">Joined United</td>
                             <td class="info-col-right">{{player.jointedDate}}</td>
-                        </tr>
-                        <tr>
-                            <td class="info-col-left">International</td>
-                            <td class="info-col-right">{{player.international}}</td>
                         </tr>
                         <tr>
                             <td class="info-col-left">Appearances</td>
