--- a/css/Style.css
+++ b/css/Style.css
@@ -1,8 +1,13 @@
+@font-face {
+  font-family: Gotham-Medium;
+  src: url(../font/gotham-medium.woff); }
+
 body {
   padding: 0;
   margin: 0;
   color: #FFF;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  font-family: Arial, Helvetica, sans-serif; }
   body ul {
     list-style: none; }
   body a {
@@ -15,18 +20,20 @@ body {
   body header {
     color: #FFF;
     background: #d4001f;
-    height: 50px;
-    border: 1px solid #555555; }
+    height: 40px;
+    padding: 0 !important;
+    position: fixed !important;
+    z-index: 10; }
     body header button {
       float: left;
       display: inline-block;
       font-size: 30px;
-      height: 50px;
-      width: 50px;
+      line-height: 40px;
+      height: 40px;
+      width: 40px;
       background: transparent;
       border: none;
-      color: #242323;
-      border-right: 1px solid #555555;
+      color: #FFF;
       outline: none; }
     body header div {
       position: absolute;
@@ -35,69 +42,62 @@ body {
       font-size: 20px;
       font-weight: bold;
       height: 40px;
-      margin: 10px 50px 0 50px;
+      margin: 5px 50px 0 50px;
       color: #FCD800; }
     body header img {
       float: right;
       display: inline;
-      width: 40px;
-      height: 40px;
+      width: 35px;
+      height: 35px;
       vertical-align: top;
-      margin-top: 5px;
+      margin-top: 2px;
       margin-right: 10px; }
   body #container.open {
     left: 0; }
   body .main {
-    -webkit-transition: all ease 0.5s;
-    -moz-transition: all ease 0.5s;
-    -ms-transition: all ease 0.5s;
-    -o-transition: all ease 0.5s;
-    transition: all ease 0.5s;
+    -webkit-transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    transition: all ease 0.3s;
     display: block;
     position: relative;
-    width: calc(100% + 250px) !important;
+    width: calc(100% + 200px) !important;
     padding: 0 !important;
-    margin: 0 !important;
-    left: -250px; }
+    margin-top: 40px;
+    left: -200px; }
     body .main .nav-left {
-      position: absolute;
+      position: fixed;
       z-index: 1;
-      background: #242323;
-      width: 250px;
-      display: block; }
+      background: #d4001f;
+      width: 200px;
+      display: block;
+      height: 100%; }
       body .main .nav-left nav a {
-        text-align: center;
+        text-align: left;
         padding: 5px;
         width: 100%;
-        height: 50px;
         display: block;
-        border: 1px solid #555555;
-        border-bottom: none; }
-        body .main .nav-left nav a:last-child {
-          border-bottom: 1px solid #555555; }
-        body .main .nav-left nav a:first-child {
-          border-top: none; }
+        margin-top: 5px; }
         body .main .nav-left nav a i {
           float: left;
-          margin-left: 20px;
-          font-size: 35px;
-          color: #555555; }
+          margin-left: 10px;
+          font-size: 20px;
+          color: #FFF; }
         body .main .nav-left nav a span {
-          margin-top: 10px;
           height: 20px;
           font-size: 14px;
           display: inline-block;
-          width: 170px;
           text-align: left;
-          padding-left: 25px;
-          color: #555555; }
+          padding-left: 10px;
+          color: #FFF; }
     body .main .content {
       position: absolute;
       z-index: 2;
       background: #242323;
-      width: calc(100% - 250px);
+      width: calc(100% - 200px);
       display: block;
-      left: 250px; }
+      left: 200px; }
       body .main .content .head-img {
         width: 100%; }
       body .main .content .home-calendar {
@@ -120,7 +120,7 @@ body {
           padding-bottom: 5px;
           margin: 0; }
           body .main .content .home-calendar ul li {
-            border-top: 1px solid #555555;
+            border-top: 1px solid #CCC;
             padding: 5px;
             padding-bottom: 10px; }
             body .main .content .home-calendar ul li:first-child {
@@ -150,12 +150,29 @@ body {
                 body .main .content .home-calendar ul li a .match-team .team-name {
                   display: block;
                   font-weight: bold; }
+      body .main .content .home-news .carousel-box {
+        position: relative; }
+        body .main .content .home-news .carousel-box .item {
+          position: relative; }
+          body .main .content .home-news .carousel-box .item img {
+            width: 100%;
+            display: block; }
+          body .main .content .home-news .carousel-box .item .title {
+            display: block;
+            width: 100%;
+            line-height: 60px;
+            color: #242323;
+            font-size: 17px;
+            padding-left: 10px;
+            background-color: rgba(255, 255, 255, 0.7); }
       body .main .content .home-news h4 {
         color: #FFF;
         padding-left: 5px;
         margin-top: 20px; }
       body .main .content .home-news ul {
-        padding: 5px; }
+        padding: 10px;
+        padding-bottom: 0;
+        margin-bottom: 0; }
         body .main .content .home-news ul li {
           background: #FFF;
           border: 1px solid #555555;
@@ -176,6 +193,43 @@ body {
               text-transform: uppercase;
               color: #242323;
               font-weight: bolder; }
+      body .main .content .home-news .showMoreBtn {
+        width: 90%;
+        margin: auto;
+        display: block;
+        margin-bottom: 20px;
+        border-radius: 0px; }
+      body .main .content .home-team h4 {
+        color: #FFF;
+        padding-left: 5px;
+        margin-top: 20px;
+        text-transform: uppercase; }
+      body .main .content .home-team .carousel-box {
+        padding: 30px; }
+        body .main .content .home-team .carousel-box .player-box {
+          border-top: 3px solid #FCD800; }
+          body .main .content .home-team .carousel-box .player-box a img {
+            width: 100%; }
+          body .main .content .home-team .carousel-box .player-box a div {
+            background: rgba(119, 119, 119, 0.85);
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+            color: #FCD800;
+            display: flex; }
+            body .main .content .home-team .carousel-box .player-box a div .player-number {
+              width: 40px;
+              display: inline-block;
+              text-align: center;
+              line-height: 40px;
+              font-size: 25px;
+              border-right: 1px solid #555555; }
+            body .main .content .home-team .carousel-box .player-box a div .player-name {
+              width: calc(100% - 44px);
+              display: inline-block;
+              line-height: 20px;
+              text-transform: uppercase;
+              text-align: center; }
       body .main .content .squad h3 {
         color: #FFF;
         padding-left: 5px;
@@ -190,6 +244,7 @@ body {
         -o-flex-flow: wrap;
         flex-flow: wrap; }
         body .main .content .squad ul li {
+          position: relative;
           background: #d4001f;
           flex-basis: 45%;
           width: 45%;
@@ -201,12 +256,12 @@ body {
           body .main .content .squad ul li a img {
             width: 100%; }
           body .main .content .squad ul li a div {
-            background: #d4001f;
+            background: rgba(119, 119, 119, 0.85);
+            position: absolute;
             width: 100%;
             bottom: 0;
             color: #FCD800;
-            display: flex;
-            border-top: 1px solid #555555; }
+            display: flex; }
             body .main .content .squad ul li a div .player-number {
               width: 40px;
               display: inline-block;
@@ -243,14 +298,13 @@ body {
             body .main .content .player-detail .player-info table tr .info-col-left {
               width: 120px;
               color: #FCD800;
-              padding: 2px;
-              padding-left: 0.5em;
+              padding-left: 1em;
               font-size: 0.9em; }
             body .main .content .player-detail .player-info table tr .info-col-right {
               color: #FFF; }
       body .main .content .player-detail .player-text {
         background: #FFF;
-        padding: 5px; }
+        padding: 5px 10px 5px 10px; }
         body .main .content .player-detail .player-text .player-text-title {
           font-weight: bold; }
         body .main .content .player-detail .player-text .player-text-content {
@@ -276,32 +330,46 @@ body {
           body .main .content .table-page table tr {
             background: #FFF; }
             body .main .content .table-page table tr td {
-              width: 20px; }
-              body .main .content .table-page table tr td:nth-child(3) {
+              width: 10px; }
+              body .main .content .table-page table tr td:nth-child(2) {
                 width: auto;
                 text-align: left;
                 padding-left: 5px; }
-              body .main .content .table-page table tr td:nth-child(2) {
-                text-align: right;
-                width: 30px; }
+            body .main .content .table-page table tr:nth-child(2) {
+              border-top: none; }
           body .main .content .table-page table thead {
-            border: 1px solid #555555; }
-            body .main .content .table-page table thead tr td {
-              padding: 5px;
-              font-weight: bold; }
+            border: 1px solid #555555;
+            border-bottom: none; }
+            body .main .content .table-page table thead tr {
+              background-color: #d4001f;
+              border-bottom: none; }
+              body .main .content .table-page table thead tr td {
+                padding: 5px;
+                font-weight: bold;
+                color: #FFF; }
           body .main .content .table-page table tbody {
             border: 1px solid #555555; }
             body .main .content .table-page table tbody .mu-team {
               background: #E8E8E8; }
             body .main .content .table-page table tbody tr {
               border-bottom: 1px solid #8c8c8c; }
-              body .main .content .table-page table tbody tr td {
-                padding-top: 5px;
-                padding-bottom: 5px; }
-                body .main .content .table-page table tbody tr td:nth-child(4) {
-                  font-weight: bold; }
-                body .main .content .table-page table tbody tr td img {
-                  width: 100%; }
+              body .main .content .table-page table tbody tr td:nth-child(1) {
+                background-position: center;
+                background-size: 60px;
+                font-family: Gotham-Medium, sans-serif;
+                font-size: 18px;
+                font-weight: bold;
+                text-shadow: -2px -2px 0 #32608a, 2px -2px 0 #32608a, -2px 2px 0 #32608a, 2px 2px 0 #32608a, -2px 0 0 #32608a, 0 -2px 0 #32608a, 2px 0 0 #32608a, 0 2px 0 #32608a;
+                color: #FFF; }
+                body .main .content .table-page table tbody tr td:nth-child(1) span {
+                  display: block;
+                  line-height: 40px;
+                  width: 40px;
+                  background-color: rgba(0, 0, 0, 0.3); }
+              body .main .content .table-page table tbody tr td:nth-child(3) {
+                font-weight: bold; }
+              body .main .content .table-page table tbody tr td img {
+                width: 100%; }
       body .main .content .calendar-page {
         padding: 5px; }
         body .main .content .calendar-page .calendar-page-headline h4 {
@@ -317,7 +385,6 @@ body {
           width: 71px; }
           body .main .content .calendar-page .calendar-page-headline .view-box a {
             font-size: 18px;
-            border: 1px solid #8c8c8c;
             padding: 6px;
             margin: 0; }
         body .main .content .calendar-page .calendar-content {
@@ -326,6 +393,50 @@ body {
           body .main .content .calendar-page .calendar-content.show {
             display: block;
             opacity: 1; }
+          body .main .content .calendar-page .calendar-content .calendar-explain {
+            text-align: center;
+            color: #8c8c8c;
+            padding-left: 5px;
+            line-height: 30px;
+            font-weight: bold; }
+            body .main .content .calendar-page .calendar-content .calendar-explain .home-title {
+              margin-right: 30px; }
+              body .main .content .calendar-page .calendar-content .calendar-explain .home-title::before {
+                content: "";
+                height: 30px;
+                width: 30px;
+                background-color: #FFF;
+                background-image: url("../image/triangle-red.png");
+                background-size: 30px;
+                background-repeat: no-repeat;
+                background-position: top left;
+                padding-left: 30px;
+                margin-right: 10px;
+                padding-top: 14px;
+                -webkit-border-radius: 5px;
+                -moz-border-radius: 5px;
+                -ms-border-radius: 5px;
+                -o-border-radius: 5px;
+                border-radius: 5px;
+                vertical-align: text-top; }
+            body .main .content .calendar-page .calendar-content .calendar-explain .away-title::before {
+              content: "";
+              height: 30px;
+              width: 30px;
+              background-color: #FFF;
+              background-image: url("../image/triangle-yel.png");
+              background-size: 30px;
+              background-repeat: no-repeat;
+              background-position: top left;
+              padding-left: 30px;
+              margin-right: 10px;
+              padding-top: 14px;
+              -webkit-border-radius: 5px;
+              -moz-border-radius: 5px;
+              -ms-border-radius: 5px;
+              -o-border-radius: 5px;
+              border-radius: 5px;
+              vertical-align: text-top; }
           body .main .content .calendar-page .calendar-content .calendar-header {
             width: 100%;
             text-align: center;
@@ -338,7 +449,6 @@ body {
               width: 30px;
               font-size: 20px;
               cursor: pointer;
-              background-color: rgba(0, 0, 0, 0.3);
               -webkit-border-radius: 5px;
               -moz-border-radius: 5px;
               -ms-border-radius: 5px;
@@ -366,8 +476,15 @@ body {
                 -ms-border-radius: 10px;
                 -o-border-radius: 10px;
                 border-radius: 10px; }
-                body .main .content .calendar-page .calendar-content table .week .day.match {
+                body .main .content .calendar-page .calendar-content table .week .day.match.home-match {
                   background-image: url("../image/triangle-red.png");
+                  background-size: 50px;
+                  background-repeat: no-repeat;
+                  background-position: top left; }
+                  body .main .content .calendar-page .calendar-content table .week .day.match.home-match span {
+                    color: #FFF; }
+                body .main .content .calendar-page .calendar-content table .week .day.match {
+                  background-image: url("../image/triangle-yel.png");
                   background-size: 50px;
                   background-repeat: no-repeat;
                   background-position: top left; }
@@ -412,3 +529,72 @@ body {
           body .main .content .calendar-page .calendar-list-content.show {
             display: block;
             opacity: 1; }
+      body .main .content .footer {
+        background-color: #E6E6E6;
+        padding: 10px;
+        padding-top: 3px; }
+        body .main .content .footer hr {
+          margin: 5px 0 5px 0; }
+        body .main .content .footer .social {
+          margin: 0;
+          padding: 0;
+          text-align: center; }
+          body .main .content .footer .social ul {
+            margin: 0;
+            padding: 5px; }
+            body .main .content .footer .social ul li {
+              margin: 5px;
+              list-style: none outside none;
+              display: inline-block; }
+          body .main .content .footer .social i {
+            width: 40px;
+            height: 40px;
+            color: #FFF;
+            background-color: #909AA0;
+            font-size: 22px;
+            text-align: center;
+            padding-top: 12px;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            border-radius: 50%;
+            -webkit-transition: all ease 0.3s;
+            -moz-transition: all ease 0.3s;
+            -ms-transition: all ease 0.3s;
+            -o-transition: all ease 0.3s;
+            transition: all ease 0.3s; }
+            body .main .content .footer .social i:hover {
+              color: #FFF;
+              text-decoration: none;
+              transition: all ease 0.3s;
+              -moz-transition: all ease 0.3s;
+              -webkit-transition: all ease 0.3s;
+              -o-transition: all ease 0.3s;
+              -ms-transition: all ease 0.3s; }
+          body .main .content .footer .social .fa-facebook:hover:hover {
+            background: #4060A5; }
+          body .main .content .footer .social .fa-twitter:hover {
+            /* round twitter icon*/
+            background: #00ABE3; }
+          body .main .content .footer .social .fa-google-plus:hover {
+            /* round google plus icon*/
+            background: #e64522; }
+          body .main .content .footer .social .fa-instagram:hover {
+            /* round instagram icon*/
+            background: #375989; }
+          body .main .content .footer .social .fa-skype:hover {
+            /* round skype icon*/
+            background: #00C6FF; }
+          body .main .content .footer .social .fa-youtube:hover {
+            /* round youtube icon*/
+            background: #FF1F25; }
+          body .main .content .footer .social .fa-youtube-play:hover {
+            /* round youtube play button icon*/
+            background: #DF192A; }
+        body .main .content .footer .partners {
+          text-align: center;
+          overflow: hidden; }
+          body .main .content .footer .partners div img {
+            margin: 0 auto;
+            float: none; }
